# Tayanch-mobile

./: README.md  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  secrets.cpp
app/src/main/java/uz/tayanch/app/: MainActivity.kt  TayanchApp.kt
app/src/main/java/uz/tayanch/app/core/: LocaleUtil.kt  ResourceProvider.kt
app/src/main/java/uz/tayanch/app/data/: CompletionStore.kt  Interests.kt
app/src/main/java/uz/tayanch/app/data/dto/: AuthDtos.kt  CareerDtos.kt  ContentDtos.kt  JobDtos.kt  OnboardingDtos.kt  ProfileDtos.kt  RoadmapDtos.kt
app/src/main/java/uz/tayanch/app/data/mock/: AndroidContent.kt  AnswerSpec.kt  CyberContent.kt  DesignContent.kt  MockData.kt  PythonContent.kt
app/src/main/java/uz/tayanch/app/data/network/: ApiRoutes.kt  NetworkModule.kt
app/src/main/java/uz/tayanch/app/data/repository/: TayanchRepository.kt
app/src/main/java/uz/tayanch/app/data/security/: AppSignature.kt  BiometricKey.kt  BreachCheck.kt  CryptoTransit.kt  InputSanitizer.kt  KeystoreCrypto.kt  NativeSecrets.kt  RootDetector.kt  SecureClock.kt  SecureSessionStore.kt  SessionManager.kt
app/src/main/java/uz/tayanch/app/di/: AppModule.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  network_security_config.xml
gradle/: libs.versions.toml
(+44 files in other folders)
